compiler/testData/diagnostics/testsWithStdLib/tieredFailures/good/isBoxGreen.kt
// FIR_IDENTICAL
// ISSUE: KT-67281
// RUN_PIPELINE_TILL: BOX

fun box() = "OK"
