compiler/testData/diagnostics/testsWithStdLib/tieredFailures/fail/isFir2IrButFir2IrPasses.kt
// FIR_IDENTICAL
// ISSUE: KT-67281
// RUN_PIPELINE_TILL: FIR2IR
// RUN_PIPELINE_TILL_GENERATOR_OVERRIDE: FIR

fun needABetterRunner() {}
